<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_park_car_screen" tools:context=".ParkCarScreen">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="200dp" android:id="@+id/map"
        tools:context="michal.myapplication.ParkCarScreen"
        android:name="com.google.android.gms.maps.SupportMapFragment" />

    <GridLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/map"
        android:layout_alignEnd="@+id/map"
        android:columnCount="1">

        <EditText
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/pickParkingEndTime"
            android:layout_row="2"
            android:layout_column="0"
            android:inputType="none"
            android:editable="false"
            android:layout_gravity="left"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/park_end_label_2"
            android:id="@+id/parkEndLabel"
            android:layout_row="1"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Notes (optional)"
            android:id="@+id/notesLabel"
            android:layout_row="3"
            android:layout_column="0" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/notesEdit"
            android:layout_row="4"
            android:layout_column="0"
            android:maxLength = "36"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/open_day_clarification"
            android:id="@+id/textView"
            android:layout_row="5"
            android:layout_column="0" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_day_toggle"
            android:id="@+id/openDayCheckbox"
            android:layout_row="6"
            android:layout_column="0"
            android:checked="false" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:text="@string/park_car_button"
            android:id="@+id/parkCarButton"
            android:layout_row="8"
            android:layout_column="0" />

    </GridLayout>


</RelativeLayout>


